Fix navigation menu layout bug, Comment out Components Page
 Date:      Wed Oct 18 23:42:01 2023 +0900
 On branch feature-layout
 Changes to be committed:
	modified:   src/App.js
	modified:   src/components/Navigation.css
	modified:   src/pages/Main.jsx

--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -6,6 +6,7 @@ nav {
     height: 80px;
     text-align: center;
     box-shadow: 0px 4px 26px rgba(0, 0, 0, 0.1);
+    white-space: nowrap;
 }
 
 .navbar-brand {
